--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <title>가게 상세 페이지</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
 </head>
 <div layout:fragment="content" th:each="s:${stores}">
   <div class="image-container">
@@ -36,7 +37,7 @@
   </div>
   <div class="store">
     <a class="btn btn-outline-dark btn-sm">찜</a>
-    <a class="btn btn-outline-dark btn-sm">공유</a>
+    <a id="share-btn" class="btn btn-outline-dark btn-sm" data-clipboard-text="https://example.com">공유</a>
     <a class="btn btn-outline-dark btn-sm" th:href="${s.instaurl}">인스타</a>
     <a class="btn btn-outline-dark btn-sm" th:href="${s.facebookurl}">페이스북</a>
     <a class="btn btn-outline-dark btn-sm" th:href="${s.youtubeurl}">유튜브</a>
@@ -69,9 +70,9 @@
     <a href="#map">지도</a>
   </div>
 
-  <div class="store">
-    <div class="chapDeal card" th:each="cd:${s.chapDealList}">
-      <img th:src="'http://localhost:8088'+${cd.eventImg}" class="card-img-top" style="width:800px; height:300px;">
+  <div class="store mt-2" th:each="cd:${s.chapDealList}">
+    <div class="chapDeal card" style="width:600px;">
+      <img th:src="'http://localhost:8088'+${cd.eventImg}" class="card-img-top" style="height:250px;">
       <div class="card-img-overlay p-0">
         <div th:text="${cd.eventTitle}" class="bookMark d-inline p-2"></div>
       </div>
@@ -130,13 +131,14 @@
   <div id="review">
     <div class="store" th:each="r,iter:${s.reviewList}">
       <!-- 리뷰 목록 -->
+
       <div class="reviews" style="width: 600px; height: 400px; border: #222 solid 1px;" th:classappend="${iter.index >= 3} ? 'hide' : ''">
         <!-- 상단 -->
         <div class="review-container d-flex justify-content-between">
           <!-- 상단 왼쪽 영역 -->
           <div class="user-info d-flex">
-            <img src="user-profile.jpg" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px">
-            <p class="user-name">유저닉네임</p>
+            <img th:src="${r.userInfo.profileImg}" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px" >
+            <p class="user-name" th:text="${r.userInfo.nickname}"></p>
             <a class="btn btn-outline-dark" style="height: 30px; padding: 5px;">팔로우</a>
             <p class="review-count">리뷰개수:3</p>
           </div>
@@ -165,49 +167,10 @@
         </div>
       </div>
     </div>
-
     <div class="store">
-      <!-- 리뷰 목록 -->
-      <div class="reviews hide" style="width: 600px; height: 400px; border: #222 solid 1px;">
-        <!-- 상단 -->
-        <div class="review-container d-flex justify-content-between">
-          <!-- 상단 왼쪽 영역 -->
-          <div class="user-info d-flex">
-            <img src="user-profile.jpg" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px">
-            <p class="user-name">유저닉네임</p>
-            <a class="btn btn-outline-dark" style="height: 30px; padding: 5px;">팔로우</a>
-            <p class="review-count">리뷰개수:3</p>
-          </div>
-          <!-- 상단 오른쪽 영역 -->
-          <div class="review-info">
-            <div class="d-flex">
-              <p class="rating-value">★4.5</p>
-              <i class="bi bi-hand-thumbs-up"></i>
-              <i class="bi bi-hand-thumbs-down"></i>
-            </div>
-            <a class="btn btn-outline-dark btn-sm">신고하기</a>
-            <!-- <button class="btn btn-dark float-right">삭제</button> -->
-          </div>
-        </div>
-
-        <!-- 중앙 영역 -->
-        <div class="review-content d-flex mt-3">
-          <img src="review-image.jpg" style="width: 150px; height: 150px;">
-          <div class="review-text">
-            <p class="review-description m-0" style="border: #222 solid 1px; width: 440px; height: 100px;">전체적인 리뷰를 작성하고 있습니다</p>
-            <p class="menu-comment" style="border: #222 solid 1px; width: 440px; height: 50px;">메뉴에 대한 한줄평</p>
-          </div>
-        </div>
-        <div class="review-comment d-flex">
-          <p class="review-description ms-5" style="border: #222 solid 1px; width: 540px; height: 100px;">저희 가게를 이용해주셔서 감사합니다</p>
-        </div>
-      </div>
-    </div>
-    <div class="store">
-      <button onclick="toggle()">더보기</button>
+      <a class="btn btn-dark" id="show-more">더보기</a>
     </div>
   </div>
-
 
   <div id="map" class="store mt-4">
     <div style="width: 600px; height: 400px; border: #222 solid 1px;">
@@ -215,21 +178,37 @@
     </div>
   </div>
 
-
-
 </div>
 </html>
 
 <script>
-  function toggle() {
-    const items = document.querySelectorAll('.reviews');
-    for(let i = 3; i < items.length; i++) {
-      items[i].classList.toggle('hide');
-    }
-  }
+  document.querySelector('[data-clipboard-text]').setAttribute('data-clipboard-text', window.location.href);
+  var clipboard = new ClipboardJS('#share-btn');
+  clipboard.on('success', function(e) {
+    alert('주소가 복사되었습니다.');
+  });
 
+  const button = document.getElementById('show-more');
+  const hiddenItems = document.querySelectorAll('.hide');
+  let currentIdx = 0;
+
+  button.addEventListener('click', () => {
+    for (let i = currentIdx; i < currentIdx + 3; i++) {
+      if (hiddenItems[i]) {
+        hiddenItems[i].classList.remove('hide');
+      } else {
+        button.hidden = true;
+        break;
+      }
+    }
+    currentIdx += 3;
+  });
 </script>
 <style>
+  img{
+    object-fit: cover;
+  }
+
   .hide {
     display: none; /*리뷰 숨기기*/
   }
