--- a/src/main/resources/templates/store/list.html
+++ b/src/main/resources/templates/store/list.html
@@ -5,7 +5,6 @@
       layout:decorate="~{layout}">
 <head>
     <title>가게 리스트와 지도</title>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4ikx943fco"></script>
     <style>
         .storelist-main{
             margin: 0 !important;
@@ -20,7 +19,7 @@
 <div layout:fragment="content">
     <div class="d-flex">
         <!-- 리스트와 필터 -->
-        <div class="col-4 d-flex flex-column text-secondary">
+        <div class="col-4 d-flex flex-column text-secondary" style="min-width: 344px; max-width: 434px; min-height: 278px;">
             <div style="display: flex; flex: 4;">
                 <!-- 필터 부분 -->
                 <div class="d-flex flex-column justify-content-center align-items-center" style="flex: 2;">
@@ -31,9 +30,10 @@
                     <!-- 메뉴 종류 -->
                     <div class="mb-2 d-flex" style="width: 90%;">
                         <div class="dropdown" style="width: 100%;">
-                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" style="width: 100%;" type="button" id="menuType" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" style="width: 100%; height:30px;" type="button" id="menuType" data-bs-toggle="dropdown" aria-expanded="false">
                                 메뉴 종류
                             </button>
+                            <!-- 디자인 수정 필요한 부분 -->
                             <ul class="dropdown-menu" aria-labelledby="menuType">
                                 <li><a class="dropdown-item" href="#">한식</a></li>
                                 <li><a class="dropdown-item" href="#">일식</a></li>
@@ -43,17 +43,17 @@
                         </div>
                     </div>
                     <!-- 가격대 -->
-                    <div class="mb-2 d-flex border-secondary justify-content-between align-items-center" style="width: 90%; border-radius: 0.25rem;">
-                        <label class="form-label m-0">가격대</label>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0">1만대</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0">2만대</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0">3만대</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0">그이상</button>
+                    <div class="mb-2 d-flex justify-content-between align-items-center" style="width: 90%; height: 30px; border-radius: 0.25rem; border-radius: 0.25rem; border: 1px solid #6c757d; line-height: 2.0;">
+                        <label class="form-label m-0" style="font-weight: 400; font-size: 0.875rem;">가격대</label>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-0">1만대</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-0">2만대</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-0">3만대</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-0 me-1">그이상</button>
                     </div>
                     <!-- 상세 지역 -->
                     <div class="mb-2 d-flex" style="width: 90%;">
                         <div class="dropdown" style="width: 100%;">
-                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" style="width: 100%;" type="button" id="detailedArea" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" style="width: 100%; height:30px;" type="button" id="detailedArea" data-bs-toggle="dropdown" aria-expanded="false">
                                 상세 지역
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="detailedArea">
@@ -65,45 +65,74 @@
                         </div>
                     </div>
                     <!-- 주차 가능 여부 -->
-                    <div class="mb-2 d-flex">
-                        <label class="form-label">주차 가능</label>
-                        <div>
-                            <button type="button" class="btn btn-outline-secondary btn-sm">가능</button>
-                            <button type="button" class="btn btn-outline-secondary btn-sm">불가능</button>
-                        </div>
+                    <div class="d-flex justify-content-center align-items-center" style="width:90%; height:30px; border-radius: 0.25rem; border-radius: 0.25rem; border: 1px solid #6c757d; line-height: 2.0;">
+                        <label class="form-label me-2 ms-1 mb-0" style="font-weight: 400; font-size: 0.875rem;">주차 가능</label>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 me-1 ms-1" style="width:50px;">가능</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 me-1 ms-1" style="width:50px;">불가능</button>
                     </div>
                 </div>
                 <!-- 정렬 부분 -->
-                <div style="flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                    <h5 class="m-2">정렬</h5>
-                    <div class="mb-3 d-flex flex-column">
-                        <button type="button" class="btn btn-secondary btn-sm m-2" id="distance">거리순</button>
-                        <button type="button" class="btn btn-secondary btn-sm m-2" id="rating">별점순</button>
-                        <button type="button" class="btn btn-secondary btn-sm m-2" id="review">리뷰개수순</button>
-                        <button type="button" class="btn btn-secondary btn-sm m-2" id="likes">찜순</button>
+                <div class="d-flex flex-column justify-content-center align-items-center" style="flex: 1;">
+                    <h5>정렬</h5>
+                    <div class="d-flex flex-column">
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mt-0" id="distance" style="height: 30px;">거리순</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="rating" style="height: 30px;">별점순</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="review" style="height: 30px;">리뷰개수순</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="likes" style="height: 30px;">찜순</button>
                     </div>
                 </div>
             </div>
+            <!-- 식당 리스트 -->
+            <div style="flex: 8; border:1px solid lightgray;">
+                <div class="d-flex justify-content-center align-items-center" style="border:1px solid gray; min-width: 342px; max-width: 432px;">
+                    <div class="col-4">
+                        <img src="#" alt="식당 대표 이미지" class="img-fluid rounded ps-1" style="min-width: 97px; max-width:127px; background-color: darkgray;"/>
+                    </div>
+                    <div class="col-5">
+                        <div class="mt-2 mb-2 d-inline">
+                            <h5 class="d-inline">구구당</h5>
+                            <i class="bi bi-hand-thumbs-up"></i>
+                            <span>256</span>
+                        </div>
+                        <p class="m-0" style="font-size: 0.875rem;">홍콩 파스타와 멘보샤가 맛있는 퓨전 아시안 레스토랑</p>
+                        <p class="mt-2 mb-2">
+                            <i class="bi bi-chat-square-text"></i>
+                            <span>999+</span>
+                            <i class="bi bi-heart ms-3"></i>
+                            <span>778</span>
+                        </p>
+                    </div>
+                    <div class="col-3 d-flex flex-column justify-content-center align-items-center">
+                        <p class="d-flex rounded border border-secondary justify-content-center p-1 m-0 mb-2" style="width: 80px;">
+                            <span style="font-size: 0.875rem;">Waiting</span>
+                            <span style="font-size: 0.875rem;">14</span>
+                        </p>
+                        <p class="d-flex rounded border border-secondary justify-content-center p-1 m-0" style="width: 80px;">
+                            <span style="font-size: 0.875rem;">아시안</span>
+                        </p>
+                        <p class="d-flex rounded border border-secondary justify-content-center p-1 m-0 mt-2" style="width: 80px;">
+                            <span style="font-size: 0.875rem;">주차 가능</span>
+                        </p>
+                    </div>
+                </div>
 
-
-            <div style="flex: 8; background-color: lightcoral">
-                <!-- 리스트 부분 -->
             </div>
         </div>
 
         <!-- 지도 -->
         <div class="col-8"
-                id=""
-                style="height: calc(100vh - 91px); background-color: lightskyblue;"></div>
+                id="map"
+                style="height: calc(100vh - 91px);"></div>
+        <script>
+            var mapOptions = {
+                center: new naver.maps.LatLng(37.3595704, 127.105399),
+                zoom: 14
+            };
+            var map = new naver.maps.Map('map', mapOptions);
+        </script>
     </div>
 </div>
-<script>
-    var mapOptions = {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 14
-    };
-    var map = new naver.maps.Map('map', mapOptions);
-</script>
+
 
 </body>
 </html>
