--- a/src/main/resources/templates/waiting/waiting.html
+++ b/src/main/resources/templates/waiting/waiting.html
@@ -1,65 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>웨이팅 페이지</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <style>
+        #div21, #div22, #div23{
+            height: 50vh;
+            text-align: center;
+            text-size-adjust: auto;
+
+        }
+        #alertModal{
+            margin: auto;
+            text-align: center;
+            justify-content: center;
+            height: 50vh;
+            width: 50vh;
+            display: block;
+        }
+        #waitingSubmit, #waitingCancel{
+            text-align: center;
+            display: inline;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+        }
+        .container{
+            display: block;
+            margin: auto;
+        }
+
+        .modal-content{
+            text-align: center;
+            display: block;
+            margin: auto;
+        }
+        .card-body{
+            height: 10vh;
+        }
+        #card
+    </style>
 </head>
 <body>
-    <h1>웨이팅 페이지</h1>
-    <!--주의사항 관련 내용 모달-->
-    <div class="modal fade" id="modalWarning" tabindex="-1" role="dialog" aria-labelledby="modalWarning" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">주의사항</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>입장 알림 후 일정 시간을 초과한 경우 입장 강제 취소가 될 수 있습니다.</p>
-                    <p>대기 강제 취소의 누적에 따라 사용자의 사용제한이 될 수 있으니 주의해주세요!</p>
-                    <                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="agreeBtn">주의사항을 읽었습니다</button>
-                </div>
-            </div>
+<div id="alertModal" style="position: relative;">
+    <div style="position: relative">
+        <div style="border: solid 5px">
+            <h2>주의 사항</h2>
+            <p>아르르르르 왈왈</p>
         </div>
+        <br>
+        <button onclick="confirmAlert()">확인했습니다</button>
     </div>
+</div>
 
-    <!--대기 등록 선택지 모달-->
-    <div class="modal fade" id="modalWaiting" tabindex="-1" role="dialog" aria-labelledby="modalWaiting" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">대기 등록하기</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="form-group">
-                                <label>인원 선택</label>
-                                <select class="form-control" id="peopleNumSelect">
-                                    <option selected disabled hidden>인원 선택</option>
-                                    <c:forEach var="i" begin="1" end="${maxPeople}">
-                                        <option value="${i}">${i}명</option>
-                                    </c:forEach>
-                                </select>
-                            </div>
-                        </div>
+
+
+<!--대기 등록 선택지 모달-->
+<div class="modal fade" id="waiting-modal" tabindex="-1" role="dialog" aria-labelledby="waiting-modal-label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="waiting-modal-label">웨이팅 대기 등록</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form th:action="@{/waiting.html}" method="post" th:object="${WaitingDto}">
+                    <!-- 대기 인원 선택 -->
+                    <div class="form-group">
+                        <label for="user-people">대기인원</label>
+                        <select class="form-control" id="user-people" th:field="*{WaitingDto.userPeople}">
+                            <option th:each="i : ${#numbers.sequence(1, WaitingDto.maxPeople)}" th:value="${i}"
+                                    th:text="${i}명"></option>
+                        </select>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="btnWait">대기 등록</button>
+
+                    <!-- 대기 등록 버튼 -->
+                    <button type="submit" class="btn btn-primary">등록</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" >
+    <div class="row justify-content-center">
+        <!--  2-1 div-->
+        <div class="col-4">
+            <div class="card" id="div21">
+                <div class="card-header">
+                    <h5 class="card-title">현재 대기팀</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"><strong><span th:text="${count}">1</span></strong></p>
+                </div>
+            </div>
+        </div>
+        <!--  2-2 div-->
+        <div class="col-4">
+            <div class="card" id="div22">
+                <div class="card-header">
+                    <h5 class="card-title">대기 번호</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">대기 번호 : <strong><span th:text="${waitNum}"></span></strong></p>
+                    <p class="card-text">웨이팅 등록 시간 : <strong><span th:text="${startTime}"></span></strong></p>
+                    <p class="card-text">예상 대기 시간 : <strong><span th:text="${timeSetup}"></span></strong> 분</p>
+                </div>
+            </div>
+        </div>
+        <!--  2-3 div-->
+        <div class="col-4">
+            <div class="card" id="div23">
+                <div class="card-header">
+                    <h5 class="card-title">홍보영상</h5>
+                </div>
+                <div class="card-body">
+                    <p class="card-text" th:if="${storeAds}">
+                        <a th:href="${storeAds}" target="_blank">링크를 클릭하세요</a>
+                    </p>
+                    <p class="card-text" th:if!="${storeAds}">내용이 없습니다.</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div style="display: flex">
+    <button type="button" class="btn btn-primary col-3" data-toggle="modal" data-target="#waiting-modal" id="deleteWaiting">
+        대기 취소하기
+    </button>
+    <button type="button" class="btn btn-primary col-3" data-toggle="modal" data-target="#waiting-modal" id="modifyWaiting">
+        인원 수정하기
+    </button>
+    <button type="button" class="btn btn-primary col-3" data-toggle="modal" data-target="#waiting-modal" id="waitingSubmit">
+        대기 등록하기
+    </button>
+</div>
+
+
+<script>
+    const alertModal = document.getElementById("alertModal");
+
+    function confirmAlert() {
+        alertModal.style.display = "none";
+
+    }
+    alertModal.style.display = "block";
+    alertModal.style.textAlign = "center";
+
+</script>
 
 </body>
 </html>
-<!--보완 수정해야함-->
+
+<!--뷰만 나옴-->
+<!--밑에 버튼 건드려야하고-->
